- MandrivaUpdate:
  o fix width of title by workarounding Gtk+ (#48259)
- rpmdrake:
  o do not try to update & parse inactive sources backports media

Version 5.10 - 17 March 2009, Thierry Vignaud

- MandrivaUpdate:
  o fix ignoring selected/unselected packages (embarassing bug #29835)
    (regression introduced in 4.10 on 24 June 2008: "show type of
    update in mandrivaupdate (fix, security, ...)")

Version 5.9 - 23 February 2009, Thierry Vignaud

- rpmdrake:
  o add 'compute_updates' option that enable super fast startup by
    skipping computing updates on startup (#42848)
  o do not try to update & parse inactive debug backports media
  o prevent running more than one instance (#47755)
  o reduce memory usage
  o update GUI package list
  o use right icon

Version 5.8 - 15 February 2009, Thierry Vignaud

- fix crashing on uninstalling packages (#47751)
- icons (#44671):
  o update banner icons from mcc ones
  o use mcc icon for banners if availlable
- prevent crashing in URPM when using --env with relative paths
- edit-urpm-sources:
  o do not use the same shortcut for "Add a specific "media mirror"
    and "_Add a custom medium" menu entries (#46027)
  o honnor canceling when the user closed the "updates/full_sources"
    dialog (#47125)
  o honnor canceling when the user refused to access the network when
    adding a specific mirror from the menubar (#46027)
  o use same icon as in mcc instead of rpmdrake one (#44671)

Version 5.7 - 11 February 2009, Thierry Vignaud

- fix using --justdb option
- MandrivaUpdate:
  o warn when rebooting is needed after installing packages
- rpmdrake:
  o add C-F accelerator in order to focus on search entry (#46404)

Version 5.6 - 9 February 2009, Thierry Vignaud

- edit-urpm-sources:
  o add media even if one failed instead of rollbacking all of them
    (regression introduced in urpmi-6.19)
  o fix displayling big list of media to remove (#46773)
  o fix media selection dialog layout so that dialog behaves smoothly