@@ -1,5 +1,6 @@
 - MandrivaUpdate:
   o fix width of title by workarounding Gtk+ (#48259)
+  o update all media on cooker instead of only update media
 - rpmdrake:
   o do not try to update & parse inactive sources backports media
 
